deploy/pihole/pihole-service-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-tcp
  namespace: pihole
  labels:
    app: pihole
spec:
  ports:
  - port: 8000
    targetPort: 80
    name: pihole-admin
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  selector:
    app: pihole
  type: LoadBalancer
