deploy/pihole/pihole-service-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-udp
  namespace: pihole
  labels:
    app: pihole
spec:
  ports:
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  selector:
    app: pihole
  type: LoadBalancer
